4번 문제까지 품

--- a/Ch04_task(code).ipynb
+++ b/Ch04_task(code).ipynb
@@ -218,10 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4901984\n"
+     ]
+    }
+   ],
+   "source": [
+    "p=25000000  #원금\n",
+    "r=6.15/100  #연이율\n",
+    "n=3 #기간\n",
+    "\n",
+    "\"\"\"\n",
+    "* round는 주어진 숫자를 지정한 소수점 자릿수에 맞춰 반올림하는 역할을 가지고 있다.\n",
+    "* 실수, 정수, 복소수등 모든 숫자에 적용할 수 있다.\n",
+    "\"\"\"\n",
+    "print(round(((1+r)**n)*p) - 25000000)"
+   ]
   },
   {
    "cell_type": "markdown",
