과제 완료(체점 전)

--- a/Ch04_task(code).ipynb
+++ b/Ch04_task(code).ipynb
@@ -305,10 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (14 + 29)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,7 +338,7 @@
     "\n",
     "당장이라도 무너질 것 같지만 이 다리 말고는 반대편으로 갈 수 있는 길이 보이지 않습니다. \n",
     "\n",
-    "무언가 불길한 기운이 계속 가까워지는 것만 같아 당신 빠르게 다리를 건너야 합니다. \n",
+    "무언가 불길한 기운이 계속 가까워지는 것만 같아 당신은 빠르게 다리를 건너야 합니다. \n",
     "\n",
     "다리는 50kg 이상 버티지 못하기 때문에 68kg인 당신은 무게를 줄여야 합니다.\n",
     "\n",
@@ -342,10 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(68 - 49)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,10 +405,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(43*4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -420,10 +450,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(172/4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,10 +488,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "541\n"
+     ]
+    }
+   ],
+   "source": [
+    "thirdNum = 3 / 3\n",
+    "print(\"54%d\" %thirdNum)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,10 +531,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.557438524302\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(43**(1/2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -511,10 +572,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15초\n"
+     ]
+    }
+   ],
+   "source": [
+    "time = (5*60)//20\n",
+    "print(\"%d초\" %time)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -549,10 +621,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.95673308974897\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.5*9.8*((2+3)**(1/2)))"
+   ]
   },
   {
    "attachments": {
@@ -598,10 +680,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(128-32)"
+   ]
   },
   {
    "cell_type": "markdown",
