--- a/day2/Ch05_task(code).ipynb
+++ b/day2/Ch05_task(code).ipynb
@@ -65,12 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "74wtVQFFc_h1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홀홀홀\n"
+     ]
+    }
+   ],
+   "source": [
+    "game = \"홀짝홀짝홀짝\"\n",
+    "odd__num = game[::2]\n",
+    "print(odd__num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,12 +120,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "9kvBxa6PdhgA"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01012345678\n"
+     ]
+    }
+   ],
+   "source": [
+    "phone = \"010-1234-5678\"\n",
+    "split__type = type(f'{phone.split(\"-\")[0]}{phone.split(\"-\")[1]}{phone.split(\"-\")[2]}')\n",
+    "print(f'{phone.split(\"-\")[0]}{phone.split(\"-\")[1]}{phone.split(\"-\")[2]}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +172,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "주말 스터디 여부: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = 70\n",
+    "B = 75\n",
+    "C = 50\n",
+    "D = 80\n",
+    "E = 60\n",
+    "\n",
+    "# 주말의 스터디 여부로 true는 한다. false는 하지 않는다로 접근.\n",
+    "weekend__study = not A+B+C+D+E < 70\n",
+    "\n",
+    "print(f'주말 스터디 여부: {weekend__study}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,12 +240,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "id": "XJhvRO-2djBh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "창업 지원 가능 여부: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "creativity = 62\n",
+    "marketability = 71\n",
+    "stability = 68\n",
+    "profitability = 66\n",
+    "\n",
+    "first__condition = profitability >= 60\n",
+    "second__condition = creativity >= 50 and marketability >= 50\n",
+    "third__condition = (marketability+profitability)/2 > stability\n",
+    "\n",
+    "print(f'창업 지원 가능 여부: {first__condition and second__condition and third__condition}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +312,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "마법사의 지능이 50이상인가? : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "wizard__stats = {'str':10, 'agi':20, 'int':80, 'sta':50}\n",
+    "\n",
+    "int__check = wizard__stats['int'] >= 50\n",
+    "\n",
+    "print(f'마법사의 지능이 50이상인가? : {int__check}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,10 +346,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전사의 힘은 60이상이고, 체력은 80이상인가? : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "warrior__stats = {'str':80, 'agi':30, 'int':20, 'sta':100}\n",
+    "\n",
+    "str__sta__check = warrior__stats['str'] >= 60 and warrior__stats['sta'] >= 80\n",
+    "\n",
+    "print(f'전사의 힘은 60이상이고, 체력은 80이상인가? : {str__sta__check}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,10 +380,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "도적의 민첩이 70 이상이거나 힘이 50 이상인가? : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "thief__stats = {'str':40, 'agi':80, 'int':30, 'sta':60}\n",
+    "\n",
+    "agi__str__check = thief__stats['agi'] >= 70 or thief__stats['str'] >= 50\n",
+    "\n",
+    "print(f'도적의 민첩이 70 이상이거나 힘이 50 이상인가? : {agi__str__check}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,10 +414,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "힐러의 지능이 60 이상이고 체력이 50 이상인가? : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "healer__stats = {'str':20, 'agi':40, 'int':70, 'sta':70}\n",
+    "\n",
+    "int__sta__check = healer__stats['int'] >= 70 or healer__stats['sta'] >= 50\n",
+    "\n",
+    "print(f'힐러의 지능이 60 이상이고 체력이 50 이상인가? : {int__sta__check}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,10 +462,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "경험치가 100 이상인가요?\n",
+      "마법사: True\n",
+      "전사: True\n",
+      "도적: True\n",
+      "힐러: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "wizard__experience__check = 120 >= 100\n",
+    "warrior__experience__check = 150 >= 100\n",
+    "thief__experience__check = 110 >= 100\n",
+    "healer__experience__check = 90 >= 100\n",
+    "\n",
+    "print(f'경험치가 100 이상인가요?\\n마법사: {wizard__experience__check}\\n전사: {warrior__experience__check}\\n도적: {thief__experience__check}\\n힐러: {healer__experience__check}')"
+   ]
   }
  ],
  "metadata": {
@@ -360,7 +497,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
