2번에 split__type 변수에 대한 선언 이유에 대해 주석 및 3문제 문제 풀이 수정

--- a/day2/Ch05_task(code).ipynb
+++ b/day2/Ch05_task(code).ipynb
@@ -135,7 +135,7 @@
    ],
    "source": [
     "phone = \"010-1234-5678\"\n",
-    "split__type = type(f'{phone.split(\"-\")[0]}{phone.split(\"-\")[1]}{phone.split(\"-\")[2]}')\n",
+    "# split__type = type(f'{phone.split(\"-\")[0]}{phone.split(\"-\")[1]}{phone.split(\"-\")[2]}')    # type으로 정말 str 로 출력되는지 궁금해서 선언.\n",
     "print(f'{phone.split(\"-\")[0]}{phone.split(\"-\")[1]}{phone.split(\"-\")[2]}')"
    ]
   },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
     "E = 60\n",
     "\n",
     "# 주말의 스터디 여부로 true는 한다. false는 하지 않는다로 접근.\n",
-    "weekend__study = not A+B+C+D+E < 70\n",
+    "weekend__study = (A+B+C+D+E)/5 < 70\n",
     "\n",
     "print(f'주말 스터디 여부: {weekend__study}')\n"
    ]
