--- a/day3/Ch03_task.ipynb
+++ b/day3/Ch03_task.ipynb
@@ -33,7 +33,7 @@
     "__[문제0]__\n",
     "\n",
     "\n",
-    "오즈 코딩 스쿨 백엔드 8기 과정에 참여한 수강생 중 3명의 수강생이 자율적으로 스터디 그룹을 결성했습니다.\n",
+    "오즈 코딩 스쿨 백엔드 9기 과정에 참여한 수강생 중 3명의 수강생이 자율적으로 스터디 그룹을 결성했습니다.\n",
     "\n",
     "스터디 그룹 내에는 한 주간 배운 내용으로 매주 쪽지 시험을 보는 룰이 있습니다. 점수는 채점자 마음입니다.\n",
     "\n",
@@ -46,10 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "점수는 각각 [85, 90, 95, 90, 100]이고, 쪽지 시험의 점수 합은 460점 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = map(int,input(\"쪽지 시험 점수들을 순서대로 입력해주세요.\").split(\",\"))\n",
+    "score = list(score)\n",
+    "total_score = sum(score)\n",
+    "\n",
+    "print(f'점수는 각각 {score}이고, 쪽지 시험의 점수 합은 {total_score}점 입니다.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,25 +80,32 @@
     "<br>\n",
     "\n",
     "```\n",
-    "movie = ['서울의 봄', '나폴레옹', '괴물', '베트맨']\n",
+    "movie_rank = ['서울의 봄', '나폴레옹', '괴물', '베트맨']\n",
     "```\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "id": "vjUhNFdBYo2n"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 영화 목록은 ['서울의 봄', '나폴레옹', '비밀', '괴물', '베트맨'] 입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "---"
+    "movie_rank = ['서울의 봄', '나폴레옹', '괴물', '베트맨']\n",
+    "\n",
+    "movie_rank.insert(2,\"비밀\")\n",
+    "\n",
+    "print(f'현재 영화 목록은 {movie_rank} 입니다.')"
    ]
   },
   {
@@ -100,19 +121,38 @@
     "<br>\n",
     "\n",
     "```\n",
-    "movie = ['서울의 봄', '나폴레옹', '비밀', '괴물', '베트맨']\n",
+    "movie_rank = ['서울의 봄', '나폴레옹', '비밀', '괴물', '베트맨']\n",
     "```\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "id": "cPezrT7cYreh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 영화 목록은 ['서울의 봄', '나폴레옹', '비밀', '괴물'] 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_rank.remove(\"베트맨\")\n",
+    "\n",
+    "print(f'현재 영화 목록은 {movie_rank} 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "언어들은 ['C', 'C++', 'JAVA', 'Python', 'Go', 'C#']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lang1 = [\"C\", \"C++\", \"JAVA\"]\n",
+    "lang2 = [\"Python\", \"Go\", \"C#\"]\n",
+    "\n",
+    "print(f'언어들은 {lang1 + lang2}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,10 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최댓값은 10이고 최솟값은 1이며, 평균은 5입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 6, 7, 9, 10]\n",
+    "\n",
+    "max_value = max(nums, default=0)    # 만약 nums 리스트 안에 요소가 없을 경우, 기본 값으로 0으로 반환된다.\n",
+    "min_value = min(nums, default=0)    # 만약 nums 리스트 안에 요소가 없을 경우, 기본 값으로 0으로 반환된다.\n",
+    "average = sum(nums)//len(nums)  # 소숫점을 없애기 위해 '//' 산술 연산자 사용.\n",
+    "\n",
+    "print(f'최댓값은 {max_value}이고 최솟값은 {min_value}이며, 평균은 {average}입니다.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,18 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "id": "iRDvWnF8wTXa"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cook 리스트에 저장된 데이터의 갯수는 8입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "---"
+    "cook = [\"피자\", \"김밥\", \"만두\", \"양념치킨\", \"족발\", \"피자\", \"김치만두\", \"쫄면\"]\n",
+    "\n",
+    "print(f'cook 리스트에 저장된 데이터의 갯수는 {len(cook)}입니다.')"
    ]
   },
   {
@@ -233,12 +307,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "id": "BpMb0bHPFdKF"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price에서 제외된 날짜는 20180728이고, 현제 price 리스트는 [100, 130, 140, 150, 160, 170]입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = ['20180728', 100, 130, 140, 150, 160, 170]\n",
+    "\n",
+    "excluding_date = price.pop(0)\n",
+    "\n",
+    "print(f'price에서 제외된 날짜는 {excluding_date}이고, 현제 price 리스트는 {price}입니다.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,12 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "id": "jADTPFzOHcKk"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "메로나의 가격은 1000원 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나': 1000,'폴로포': 1200,'빵빠레': 1800,'죠스바': 1200,'월드콘': 1500}\n",
+    "print(f'메로나의 가격은 {ice[\"메로나\"]}원 입니다.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,12 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "id": "C2RyUgoTJKsF"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "메로나의 가격이 1200원으로 인상되었습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice[\"메로나\"] = 1200\n",
+    "print(f'메로나의 가격이 {ice[\"메로나\"]}원으로 인상되었습니다.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,12 +444,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "id": "7RyqlYwpJOp7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "수강생의 등급은 다음과 같습니다.\n",
+      "{'나이썬': 'B', '김자바': 'B', '김씨': 'A', '박씨샵': 'C'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_info = {'나이썬' : 'B', '김자바' : 'B', '김씨' : 'A', '박씨샵' : 'C'}\n",
+    "\n",
+    "print(f'수강생의 등급은 다음과 같습니다.\\n{student_info}')  # \\n은 개행을 의미한다."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -368,10 +491,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "아이스크림 정보는 다음과 같습니다.\n",
+      "{'메로나나': [300, 20], '비비빅': [400, 3], '죠스바': [250, 100], '보석바': [650, 10]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나나' : [300, 20], '비비빅' : [400, 3], '죠스바' : [250, 100]}\n",
+    "\n",
+    "ice['보석바'] = [650, 10]\n",
+    "\n",
+    "print(f'아이스크림 정보는 다음과 같습니다.\\n{ice}')  # \\n은 개행을 의미한다.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,12 +533,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "id": "m5m-a09iLVbO"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "저희가 현재 보유 중인 아이스크림은 다음과 같습니다.\n",
+      "['메로나', '폴로포', '빵빠레', '죠스바', '월드콘']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나': 1000, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n",
+    "\n",
+    "ice_list = list(ice.keys())\n",
+    "\n",
+    "print(f'저희가 현재 보유 중인 아이스크림은 다음과 같습니다.\\n{ice_list}')"
+   ]
   }
  ],
  "metadata": {
@@ -413,7 +566,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
