3일차 과제 제출

--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -51,7 +51,18 @@
     "id": "juUF2KYbu0DX"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 2\n",
+    "n = 5\n",
+    "\n",
+    "num_list = list()\n",
+    "\n",
+    "for i in range(5):\n",
+    "    x += x\n",
+    "    num_list.append(x)\n",
+    "\n",
+    "print(num_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,7 +94,21 @@
     "id": "P0fY7CYUvC_j"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "phone_number = \"01012347890\"\n",
+    "secret_phone_number = \"\"\n",
+    "\n",
+    "phone_number_list = list(phone_number)\n",
+    "\n",
+    "for i in range(0,len(phone_number_list)) :\n",
+    "    if i==7 or i==8 or i==9 or i==10:\n",
+    "        secret_phone_number += \"*\"\n",
+    "    else:\n",
+    "        secret_phone_number += phone_number_list[i] \n",
+    "\n",
+    "\n",
+    "print(f'전화번호의 뒤4자리를 * 로 가리게 되면 \"{secret_phone_number}\" 입니다.')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,12 +157,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "2NmqRFgDvFtz"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영숫자 필터기: 9876543210\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"숫자를 입력해주세요.(소문자 영어 숫자 지원!!!): \")\n",
+    "filter_num = ''\n",
+    "en_num = ['zero','one','two','three','four','five','six','seven','eight','nine']\n",
+    "\n",
+    "num = ''    # 문자가 나올 때마다 num에 넣어 en_num 리스트 안에 값을 찾는용으로 선언\n",
+    "\n",
+    "for i in range(0, len(s)):  # 입력값의 길이 만큼 반복문을 돌려 문자 하나하나를 체크하려고 선언\n",
+    "    if s[i].isdigit():  # 해당 문자가 숫자인지 확인\n",
+    "        filter_num += s[i]  # 숫자이면 결과물로 출력해야 될 filter_num에 추가!\n",
+    "    else:   # 문자일 경우\n",
+    "        num += s[i] # num 안에 문자 추가!\n",
+    "        if num in en_num:   # en_num 리스트 안에 num 이 있는지 확인 (있다면: True, 없다면: False)\n",
+    "            filter_num += str(en_num.index(num))    # en_num 리스트 안에 num이 있다면 filter_num에 추가!\n",
+    "            num = ''    #결과값으로 출력할 filter_num에 추가했으니 다시 초기화!\n",
+    "\n",
+    "print(f'영숫자 필터기: {filter_num}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,12 +217,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "ujiXrEhJvIV0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[([1, 2], [3, 4]), ([2, 3], [5, 6])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = [[1,2],[2,3]]\n",
+    "arr2 = [[3,4],[5,6]]\n",
+    "result = list()\n",
+    "\n",
+    "for i in range(0,len(arr1)):    # 안에 있는 리스트의 값들을 더하기 위해 바깥 리스트의 길이 만큼 반복문\n",
+    "    for j in range(0,len(arr2)):    # 안에 있는 리스트의 길이 만큼 반복문\n",
+    "        result.append\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
