🌱 4일차 과제 제출
4번 문제 푸는중,,,(왤케 안풀리죠 ㅠㅠ)

--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {
     "id": "ujiXrEhJvIV0"
    },
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[([1, 2], [3, 4]), ([2, 3], [5, 6])]\n"
+      "result 리스트는 [[4, 6, 7, 9], [4, 6, 7, 9], [4, 6, 7, 9], [4, 6, 7, 9]]입니다.\n"
      ]
     }
    ],
@@ -234,10 +234,8 @@
     "arr1 = [[1,2],[2,3]]\n",
     "arr2 = [[3,4],[5,6]]\n",
     "result = list()\n",
+    "sub_list = list()\n",
     "\n",
-    "for i in range(0,len(arr1)):    # 안에 있는 리스트의 값들을 더하기 위해 바깥 리스트의 길이 만큼 반복문\n",
-    "    for j in range(0,len(arr2)):    # 안에 있는 리스트의 길이 만큼 반복문\n",
-    "        result.append\n",
     "\n",
     "\n"
    ]
