🌱 4번문제까지 풀고 제출
4번 문제까지 품.

--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {
     "id": "ujiXrEhJvIV0"
    },
@@ -226,15 +226,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result 리스트는 [[4, 6, 7, 9], [4, 6, 7, 9], [4, 6, 7, 9], [4, 6, 7, 9]]입니다.\n"
+      "result 리스트는 [[4, 6], [7, 9]]입니다.\n"
      ]
     }
    ],
    "source": [
     "arr1 = [[1,2],[2,3]]\n",
     "arr2 = [[3,4],[5,6]]\n",
-    "result = list()\n",
-    "sub_list = list()\n",
+    "\n",
+    "result = list() # 결과값으로 출력할 result 리스트 선언\n",
+    "\n",
+    "for i in range(0,len(arr1)):    # 이중 리스트이기에 내부에 있는 리스트에 있는 값들을 더하기 위해 일단 바깥 리스트 뜯어내기!\n",
+    "    sub_list = list()\n",
+    "    for j in range(0,len(arr1[i])):    # arr1과 arr2에 들어있는 값끼리 더하기 위해 안에 있는 리스트의 길이 만큼 반복문\n",
+    "        sub_list.append(arr1[i][j]+arr2[i][j])  # arr[i] 리스트 안에 있는 값을 sub_list에 추가.\n",
+    "    result.append(sub_list) # arr[i] 리스트의 값 합산이 끝났으니니 result 값에 추가.\n",
+    "print(f'result 리스트는 {result}입니다.')\n",
     "\n",
     "\n",
     "\n"
