--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -280,12 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "id": "EULD-IOrvKmG"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x는 하샤드 수입니까? : False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 17\n",
+    "\n",
+    "# 1과 7을 더하기 위해 17을 시퀀스인 문자열로 변환 후 앞자리와 뒷자리를 구해 다시 int 로 형변환하여 더함.\n",
+    "sum_x = int(str(17)[0]) + int(str(17)[1])\n",
+    "\n",
+    "print(f'x는 하샤드 수입니까? : {x//sum_x == 0}')"
+   ]
   },
   {
    "cell_type": "markdown",
