🌱 7번 문제까지 모두 풀고 제출!
모두 풀고 제출합니다!

--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -329,12 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "id": "e4LXat3BvRRg"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김서방은 1에 있다\n"
+     ]
+    }
+   ],
+   "source": [
+    "seoul = [\"Jane\",\"Kim\"]\n",
+    "\n",
+    "print(f'김서방은 {seoul.index(\"Kim\")}에 있다')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,12 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "id": "598DAkIHvQav"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numbers에서 찾을 수 없었던 값들의 합은 16입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [5,8,1,0,6,9]\n",
+    "num = 0\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i not in numbers:\n",
+    "        num += i\n",
+    "\n",
+    "print(f'numbers에서 찾을 수 없었던 값들의 합은 {num}입니다.')"
+   ]
   }
  ],
  "metadata": {
