--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -345,7 +345,7 @@
    "source": [
     "seoul = [\"Jane\",\"Kim\"]\n",
     "\n",
-    "print(f'김서방은 {seoul.index(\"Kim\")}에 있다')"
+    "print(f'김서방은 {seoul.index(\"Kim\")}에 있다')  #index() 메소드를 통해 Kim의 위치 찾기!!"
    ]
   },
   {
@@ -389,7 +389,7 @@
     "num = 0\n",
     "\n",
     "for i in range(10):\n",
-    "    if i not in numbers:\n",
+    "    if i not in numbers:    # numbers 안에 i 숫자가 없을 경우!!!\n",
     "        num += i\n",
     "\n",
     "print(f'numbers에서 찾을 수 없었던 값들의 합은 {num}입니다.')"
