🐛 오답 수정 완료!!!
day3, day4  오답 풀이 수정

--- a/day3/Ch03_task.ipynb
+++ b/day3/Ch03_task.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {
     "id": "7RyqlYwpJOp7"
    },
@@ -453,15 +453,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "수강생의 등급은 다음과 같습니다.\n",
-      "{'나이썬': 'B', '김자바': 'B', '김씨': 'A', '박씨샵': 'C'}\n"
+      "{'나이썬': 'B', '김자반': 'B', '김씨': 'A', '박씨샵': 'C'}\n"
      ]
     }
    ],
    "source": [
-    "student_info = {'나이썬' : 'B', '김자바' : 'B', '김씨' : 'A', '박씨샵' : 'C'}\n",
+    "# student_info = {'나이썬' : 'B', '김자바' : 'B', '김씨' : 'A', '박씨샵' : 'C'}\n",
+    "# print(f'수강생의 등급은 다음과 같습니다.\\n{student_info}')  # \\n은 개행을 의미한다.\n",
     "\n",
-    "print(f'수강생의 등급은 다음과 같습니다.\\n{student_info}')  # \\n은 개행을 의미한다."
+    "\n",
+    "# names와 grades 변수 객체를 선언하여 딕셔너리 만드는 로직 작성\n",
+    "# names와 grades의 리스트 크기가 동일하기에 zip 함수를 이용해 name을 keys, grades를 values 로 묶음\n",
+    "name = ['나이썬', '김자반', '김씨', '박씨샵']\n",
+    "grades = ['B','B','A','C']\n",
+    "student_info = dict(zip(name,grades))\n",
+    "print(student_info)"
    ]
   },
   {
