--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -46,18 +46,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "juUF2KYbu0DX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 8, 16, 32]\n"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "n = 5\n",
     "\n",
     "num_list = list()\n",
     "\n",
-    "for i in range(5):\n",
+    "num_list.append(x)\n",
+    "for i in range(n-1):\n",
     "    x += x\n",
     "    num_list.append(x)\n",
     "\n",
@@ -89,11 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "P0fY7CYUvC_j"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전화번호의 뒤4자리를 * 로 가리게 되면 \"0101234****\" 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "phone_number = \"01012347890\"\n",
     "secret_phone_number = \"\"\n",
@@ -101,7 +118,8 @@
     "phone_number_list = list(phone_number)\n",
     "\n",
     "for i in range(0,len(phone_number_list)) :\n",
-    "    if i==7 or i==8 or i==9 or i==10:\n",
+    "    # if i==7 or i==8 or i==9 or i==10:\n",
+    "    if i >= 7:  # 내가 산술 연산자를 생각을 안했다니,,,,(원래 위처럼 작성,,했다는,,,ㅠㅜㅜ)\n",
     "        secret_phone_number += \"*\"\n",
     "    else:\n",
     "        secret_phone_number += phone_number_list[i] \n",
@@ -280,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {
     "id": "EULD-IOrvKmG"
    },
@@ -297,7 +315,7 @@
     "x = 17\n",
     "\n",
     "# 1과 7을 더하기 위해 17을 시퀀스인 문자열로 변환 후 앞자리와 뒷자리를 구해 다시 int 로 형변환하여 더함.\n",
-    "sum_x = int(str(17)[0]) + int(str(17)[1])\n",
+    "sum_x = int(str(x)[0]) + int(str(x)[1]) # 이전에는 x 변수 대신 str(17)로 넣었다는,,,,참 바보인거 ㅇㅈ,,\n",
     "\n",
     "print(f'x는 하샤드 수입니까? : {x//sum_x == 0}')"
    ]
