--- a/day5/Chapter1720_task.ipynb
+++ b/day5/Chapter1720_task.ipynb
@@ -175,15 +175,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "id": "A7h3I8CWL5ox"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "클래스 정복\n"
+     ]
+    }
+   ],
    "source": [
     "class oz:\n",
     "    def __init__(self, name, age, c_level):\n",
-    "        print(\"클래스 정복\")"
+    "        print(\"클래스 정복\")\n",
+    "\n",
+    "coding = oz(\"김코\", 30, \"A\")"
    ]
   },
   {
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {
     "id": "qCrPejI_L8Wr"
    },
@@ -227,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---클래스 정복---\n",
+      "클래스 정복\n",
       "이름: 김코\n",
       "나이 : 30\n",
       "코딩레벨 : A\n"
@@ -237,7 +247,7 @@
    "source": [
     "class oz:\n",
     "    def __init__(self, name, age, c_level):\n",
-    "        print(\"---클래스 정복---\")\n",
+    "        print(\"클래스 정복\")\n",
     "        self.name = name\n",
     "        self.age = age\n",
     "        self.c_level = c_level\n",
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {
     "id": "fvrvm87vL_HZ"
    },
@@ -280,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---클래스 정복---\n",
+      "클래스 정복\n",
       "이름: 김코, 나이: 30, 코딩레벨: A\n"
      ]
     }
@@ -288,7 +298,7 @@
    "source": [
     "class oz:\n",
     "    def __init__(self, name, age, c_level):\n",
-    "        print(\"---클래스 정복---\")\n",
+    "        print(\"클래스 정복\")\n",
     "        self.name = name\n",
     "        self.age = age\n",
     "        self.c_level = c_level\n",
